# Epitech-Zappy

./: .gitignore  CMakeLists.txt  Makefile  README.md  best_network.json  clean.sh  doxyfile  run.sh  tests.sh
.github/: c_checker.py  commit_msg.sh
.github/checker/: C-A3.py  C-C1.py  C-C3.py  C-F2.py  C-F3.py  C-F4.py  C-F5.py  C-F6.py  C-F8.py  C-F9.py  C-G1.py  C-H1.py  C-H2.py  C-L2.py  C-L3.py  C-L4.py  C-O1.py  C-O3.py  C-O4.py  C-V1.py  runner.py  tokens.txt
.github/checker/stashed/: C-H3.py  C-L3.py
.github/checker/utils/: __init__.py
.github/checker/utils/functions/: __init__.py
.github/checker/vera/: __init__.py
.github/workflows/: workflow.yml
assets/: rock.dae
include/gui/: ErrorHandling.hpp  Graphic.hpp  Map.hpp  Ressource.hpp  Utils3d.hpp  venom.hpp
include/gui/Client/: client.hpp
include/gui/Informations/: Player.hpp  ServerInformations.hpp  Team.hpp
include/gui/Mateyak/: Audio.hpp  Camera.hpp  Matrix.hpp  Model3D.hpp  Shaders.hpp  Sprite.hpp  Triangle.hpp  Vector.hpp  Vector2.hpp  Wave.hpp  Window.hpp  rlights.hpp
include/gui/Perlin/: Perlin.hpp
include/server/: args.h  linked_list.h  safe_write.h  server.h  strings.h  trantor.h
include/server/utility/: garbage_collector.h  linked_list.h  safe_write.h  strings.h
src/ai/: brain.py  commands.py  main.py  main_mac.py  reader.py  utils.py
src/ai/logic/: __init__.py  _broadcast.py  _evolve.py  _finding.py  _guard.py  _movement.py  brain.py  evolve.py  finding.py
src/ai/neural_network/: layer.py  math.py  matrix.py  mymath.py  network.py
src/gui/: Map.cpp  Utils3d.cpp  main.cpp  venom.cpp
src/gui/Client/: client.cpp  client_loop.cpp  receive.cpp  send.cpp  setter.cpp
src/gui/ErrorHandling/: ErrorHandling.cpp
src/gui/Graphic/: Compute.cpp  Display.cpp
src/gui/Informations/: Player.cpp  ServerInformations.cpp  Team.cpp
src/gui/Mateyak/: Audio.cpp  Camera.cpp  Matrix.cpp  Model3D.cpp  Shaders.cpp  Sprite.cpp  Triangle.cpp  Wave.cpp  Window.cpp
src/gui/Menu/: menu.cpp
src/gui/Perlin/: Perlin.cpp
src/gui/shader/: fog.fs  test.fs
src/server/: check_args_validity.c  main.c  parse_args.c  strings.c
src/server/garbage_collector/: garbage_handling.c  my_malloc.c
src/server/linked_list/: linked_list.c  remove_if.c
src/server/network/: ai_log_handler.c  check_food.c  client.c  client_input.c  gui_connected_answer.c  handle_actions.c  notify_gui.c  server_init.c  server_run.c  server_run_utils.c  state_handler.c
src/server/safe_write/: my_write.c  packet.c
src/server/trantor/: action.c  data_send.c  map.c  player.c  team.c  tile_handling.c  tile_handling2.c  tile_handling3.c  trantor_init.c
src/server/trantor/ai_handlers/: ai_handlers1.c  ai_handlers2.c  ai_handlers3.c  fork.c  freeze.c  incantation.c  incantation_utils.c
src/server/trantor/gui_handling/: handlers1.c  handlers2.c  handlers3.c  responses1.c
src/server/utility/: debug_print.c  str_array.c  str_array_2.c  str_to_word_array.c  strings.c  strings2.c  time.c
src/server/utility/garbage_collector/: garbage_handling.c  my_malloc.c
src/server/utility/linked_list/: linked_list.c  remove_if.c
src/server/utility/linked_list/multi_dimensional_linked_list/: dim_liked_list.c  dim_remove_if.c  remove_if.c
src/server/utility/safe_write/: my_write.c  packet.c
tests/ai/: globals.py  mini_server.py  test_broadcast.py  test_commands.py  test_evolve.py  test_finding.py  test_init.py  test_main.py  test_movement.py  test_reader.py  test_utils.py
tests/server/: Makefile  test_actions.c  test_ai_handlers.c  test_ai_log.c  test_fork.c  test_handle_actions.c  test_incantation_utils.c  test_linked_list.c  test_parse_args.c  test_safe_write.c  test_server_init.c  test_strings.c  test_syscalls.c  test_tile_handling.c  test_tile_handling2.c  test_tile_handling3.c  test_time.c  test_utility.c
